# price_monitoring

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 437e46b9bcce_init.py  b6d2f2b078ba_создание_таблиц_product_sources_и_price_.py
app/: main.py
app/api/: router.py
app/api/endpoints/: health.py  monitoring.py  prices.py
app/core/: config.py  database.py  http_client.py
app/models/: __init__.py  price_history.py  product.py  product_source.py  source.py
app/repositories/: price_history_repository.py  product_repository.py  product_source_repository.py  scrape_repository.py  source_repository.py
app/scrappers/: base.py  dto.py  magnum.py  service.py  small.py  spar.py
app/services/: price_alert_service.py  scrapper_service.py  service_registry.py  telegram_notifier.py
app/tasks/: broker.py  tasks.py
price_monitoring_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
