[project]
name = "price-monitoring-system"
version = "0.1.0"
description = "Система мониторинга цен"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "alembic",
    "httpx",
    "taskiq",
    "taskiq-redis",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]